post topics via solidjs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="app"></div>
-    <div id="app2"></div>
+    <div id="Post_topic"></div>
+    <div id="Select_topic"></div>
 
     <script src="/src/index.jsx" type="module"></script>
   </body>
