--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,10 +9,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="app"></div>
-    <div id="Post_topic"></div>
-    <div id="Select_topic"></div>
+    <div id="root"></div>
 
-    <script src="/src/index.jsx" type="module"></script>
+    <script src="/src/index.tsx" type="module"></script>
   </body>
 </html>
