--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
     <div id="root"></div>
     <div id="form"></div>
     <div id="auth"></div>
+    <div id="search"></div>
 
 
     <script src="/src/index.tsx" type="module"></script>
